leaflet/leafletGmx.css
/* added css for Geomixer */
.leaflet-left.leaflet-top.leaflet-bottom.gmx-bottom-shift {
    bottom: 0px;
    height: 100%;
}

.leaflet-gmx-copyright-location {
    left: 0px;
}

.leaflet-gmx-icon-boxzoom {
    background-position: -623px 2px;
}
.leaflet-gmx-icon-boxzoom-active {
    background-position: -623px -24px;
}

.leaflet-control-permalink, .leaflet-control-gmxprint  {
    clear: none;
}
.leaflet-gmx-icon-permalink{
    background-position: -531px 2px;
}

.leaflet-gmx-icon-gmxprint {
    background-position: -49px 1px;
}

.cursorAuto {
    cursor: auto;
}

.leaflet-container {
    cursor: default;
}

.leaflet-image-layer {
    z-index: -1;
}

.leaflet-ext-search {
    border-radius: 5px;
}

@media screen and (min-width: 1300px) {
    .leaflet-ext-search input {
        width: 310px;
    }
    .leaflet-ext-search,
    .leaflet-ext-search-list {
        width: 350px;
    }
}

@media screen and (max-width: 1300px) {
    .leaflet-ext-search input {
        border-radius: 4px;
        width: 150px;
    }
    .leaflet-ext-search,
    .leaflet-ext-search-list {
        width: 190px;
    }
}

.iconSidebarControl {
    background-color: #4c5567 !important;
    /* background-color: #FFF !important; */
    height: 100%;
}

.iconSidebarControl_opened {
    width: 400px !important;
}

/*.iconSidebarControl {
    margin: 0;
}*/

.leaflet-top .leaflet-control.iconSidebarControl,
.leaflet-left .leaflet-control.iconSidebarControl,
.leaflet-bottom .leaflet-control.iconSidebarControl {
    margin-left: 0;
    margin-top: 0;
    margin-bottom: 0;
 }

.iconSidebarControl-content {
    background-color: #FFF;
}

@media screen and (max-width: 1300px) {
.leaflet-ext-search input {
    width: 150px;
}

.leaflet-gmx-iconSvg {
	text-align: center;
    height: 24px;

	border-radius: 4px;
	background-color: rgb(255, 255, 255);
	box-shadow: 0px 3px 4.7px 0.3px rgba(0, 0, 0, 0.24);
	fill: #757575;

    clear: none;
    cursor: pointer;
    display: block;
    float: left;
    margin-left: 4px;
    position: relative;
}

.leaflet-gmx-icon-groupSvg {
	 box-shadow: none;
}

